--- a/pallets/nfassets/Cargo.toml
+++ b/pallets/nfassets/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "nfassets"
+name = "pallet-nfassets"
 version = "0.1.0"
 edition = "2021"
 
@@ -28,6 +28,3 @@ std = [
 	"frame-system/std",
 	"frame-benchmarking/std",
 ]
-
-runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
-try-runtime = ["frame-support/try-runtime"]
