--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -54,6 +54,7 @@ hex-literal = { version = "0.3.4", optional = true }
 
 # Local Dependencies
 pallet-template = { version = "4.0.0-dev", default-features = false, path = "../pallets/template" }
+pallet-nfassets = { default-features = false, path = "../pallets/nfassets"}
 
 [build-dependencies]
 substrate-wasm-builder = { version = "5.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
@@ -90,7 +91,8 @@ std = [
 	"pallet-aura/std",
 	"pallet-assets/std",
 	"pallet-balances/std",
-    "pallet-nicks/std"
+    "pallet-nicks/std",
+	"pallet-nfassets/std"
 ]
 runtime-benchmarks = [
 	"frame-benchmarking/runtime-benchmarks",
